--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <h1>Hello World, we are software developers!</h1>
     <p id="description">This is a survey form</p>
 
-    <!--
+    <form id="survey-form" >
+        <label for="name">
+            name
+            <input type="text" id="name"/>
+        </label>
+        <label for="email">
+            email
+            <input type="Email" id="email"/>
+        </label>
+        
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    </form>
     <script src="js/index.js"></script>
 </body>
 
