--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Hello World, we are software developers!</h1>
     <p id="description">This is a survey form</p>
 
-    <form id="survey-form" >
+    <form id="survey-form">
         <label for="name">
             name
             <input type="text" id="name"/>
@@ -23,7 +23,11 @@
             email
             <input type="Email" id="email"/>
         </label>
-        
+        <label for="number">
+          number
+          <input type="Number" id="Number"/>
+      </label>
+
 
     </form>
     <script src="js/index.js"></script>
