--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     <p id="description">This is a survey form</p>
 
     <form id="survey-form">
-        <label for="name">
+        <label for="name" id="name-label">
             name
             <input type="text" id="name"/>
         </label>
-        <label for="email">
+        <label for="email" id="email-label">
             email
-            <input type="Email" id="email"/>
+            <input type="Email" id="email">
         </label>
-        <label for="number">
+        <label for="number" id="number-label">
           number
-          <input type="Number" id="Number"/>
+          <input type="Number" id="Number" min="10" max="100"/>
       </label>
+     
 
 
     </form>
