--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
     <form id="survey-form">
         <label for="name" id="name-label">
             name
-            <input type="text" id="name"/>
+            <input type="text" id="name" placeholder="Enter your name"/>
         </label>
         <label for="email" id="email-label">
             email
-            <input type="Email" id="email">
+            <input type="Email" id="email" placeholder="Enter your email">
         </label>
         <label for="number" id="number-label">
           number
-          <input type="Number" id="Number" min="10" max="100"/>
+          <input type="Number" id="Number" placeholder="Enter your number" min="10" max="100"/>
       </label>
-     
+        <label for="drop-down">Select an option:</label>
+        <select id="dropdown">
+          <option value="volvo">Volvo</option>
+          <option value="saab">Saab</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="audi">Audi</option>
+        </select>
+
 
 
     </form>
