--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title id="title"><h1>Survey Form</h1></title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8" />
+    <title id="title">
+        <h1>Survey Form</h1>
+    </title>
+    <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1>Hello World, we are software developers!</h1>
     <p id="description">This is a survey form</p>
 
     <form id="survey-form">
-      <label for="name" id="name-label">name:</label>
-      <input type="text" id="name" placeholder="Enter your name" />
-      <label for="email" id="email-label">email:</label>
-      <input type="Email" id="email" placeholder="Enter your email" />
-      <label for="number" id="number-label">number"</label>
-      <input
-        type="Number"
-        id="Number"
-        placeholder="Enter your number"
-        min="10"
-        max="100"
-      />
-      <label for="drop-down">Select an option:</label>
-      <select id="dropdown">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
+        <label for="name" id="name-label">name:</label>
+        <input type="text" id="name" placeholder="Enter your name" />
+        <label for="email" id="email-label">email:</label>
+        <input type="Email" id="email" placeholder="Enter your email" />
+        <label for="number" id="number-label">number"</label>
+        <input type="Number" id="Number" placeholder="Enter your number" min="10" max="100" />
+
+        <label for="drop-down">Select an option:</label>
+        <select id="dropdown">
+        <option value="fruit1">Apples</option>
+        <option value="fruit2">Bananas</option>
+        <option value="fruit3">Melons</option>
+        <option value="fruit4">Paw-paws</option>
       </select>
-      <label for="Green Apples">Green Apples
+        <label for="Green Apples">Green Apples
 		<input id="Green Apples" type="radio" name="Green Apples" value="Green Apples">
 	</label>
-	<label for="Red Apples">Red Apples
+        <label for="Red Apples">Red Apples
 		<input id="Red Apples" type="radio" name="Green Apples" value="Red Apples">
-    </label>  
+    </label>
 
-    <label for="box1">Box1
-		<input id="box1" type="checkbox" name="box1" value="box1">
-	</label>
-	<label for="box2">Box2
-		<input id="box2" type="checkbox" name="box2" value="box2">
+        <label for="box1">Box1
+      <input id="box1" type="checkbox" name="box1" value="box1">
+    </label>
+        <label for="box2">Box2
+      <input id="box2" type="checkbox" name="box2" value="box2">
     </form>
-    <script src="js/index.js"></script>
-  </body>
+
+    <div id= "comment-section">
+      <label for="comments">
+        Do you have any Comments?</label>
+
+        <textarea id="comments" class="input-field" style="height:50px;resize:vertical;" name="comment" placeholder="Enter your comment here..."></textarea>
+        </div>
+        <div><button type="submit" id="submit" class="dropdown"> Submit </button></div>
+
+        <script src="js/index.js"></script>
+</body>
+
 </html>
