--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
+  <title>Meditation App Survey Form</title>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css.css" rel="stylesheet">
 </head>
@@ -70,7 +70,6 @@
           What would you like to see improved?
           <span class="clue">(Check all that apply)</span>
         </p>
-
         <label><input name="prefer" value="goal-tracker" type="checkbox" class="input-checkbox" />Goal tracker</label>
         <label>
           <input name="prefer" value="meditation-music" type="checkbox" class="input-checkbox" />Meditation
@@ -102,7 +101,5 @@
       </div>
     </form>
   </div>
-
 </body>
-
 </html>
